Setup BE and integrate APIs

--- a/frontend/src/container/Login/styles.scss
+++ b/frontend/src/container/Login/styles.scss
@@ -20,6 +20,7 @@
     background: white;
     border-radius: 10px;
     width: 400px;
+    height: 310px;
 
     .ant-form-item-label {
       text-align: start;
