--- a/frontend/src/container/Layout/styles.scss
+++ b/frontend/src/container/Layout/styles.scss
@@ -13,7 +13,10 @@
 .ant-layout-content {
   height: calc(100% - 64px);
   overflow: auto;
-  padding: 50px;
+  margin: 24px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .input-search {
